avoid dangling document pointers

BUG: 461558